--- a/jdp/update-site/index.html
+++ b/jdp/update-site/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>IIQ Tools JDP (beta) <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
-<p>This URL is an Eclipse update site repository http://iiqtools.com/jdp/update-site/</p> 
+<p>This URL is an Eclipse update site repository https://iiqtools.github.io/jdp/update-site/</p> 
 <p><a href="../../">Quick Start</a></p>
 
 <img src="../../images/install/install-000.png"><br/>
