--- a/jdp/update-site/index.html
+++ b/jdp/update-site/index.html
@@ -2,14 +2,19 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="google" value="notranslate">
 <title>IIQ Tools JDP</title>
+<link rel="stylesheet" href="../../style.css"/> 
 </head>
 <body>
-<h1>IIQ Tools JDP (beta) <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
-<p>This URL is an Eclipse update site repository https://iiqtools.github.io/jdp/update-site/</p> 
-<p><a href="../../">Quick Start</a></p>
-
-<img src="../../images/install/install-000.png"><br/>
-
+<div class="corner-ribbon top-right sticky orange">Beta Version</div>
+<div class="center">
+	<h1>IIQ Tools JDP <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
+	<p>This URL is an Eclipse update site repository https://iiqtools.github.io/jdp/update-site</p> 
+</div>
+<div class="left">	
+	<p><a href="../../">Quick Start</a></p>
+</div>	
+	<img src="../../images/install/install-001.png"><br/>
 </body>
 </html>
