--- a/index.html
+++ b/index.html
@@ -2,56 +2,58 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="google" value="notranslate">
 <title>IIQ Tools JDP</title>
+<link rel="stylesheet" href="style.css"/> 
 </head>
 <body>
-<h1>IIQ Tools JDP (beta) <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
+<div class="corner-ribbon top-right sticky orange">Beta Version</div>
+<div class="center">
+  <h1>IIQ Tools JDP <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
+  <p>Tired of lack of code validation and formating in SailPoint IdentityIQ? Try it in real Java ...</p>
+	<p>This plugin provides tools for generating BeanShell code from linked Java classes for SailPoint IdentityIQ</p>
+</div>
+<div class="left">	
+	<a href="jdp/update-site/">Installation</a>
+	<h2>Quick Start</h2>
+	<p>Create a new Java Project</p>
+</div>	<img src="images/project/project-001.png"><br/><div class="left">  	
+	<p>Create new source folder 'dev'</p>
+</div>	<img src="images/project/project-002.png"><br/><div class="left">  	
+	<p>Add IIQ Tools Library on the build path</p>
+</div><img src="images/project/project-003.png"><br/><div class="left">   
+	<p>Optional - specify location of the IdentityIQ libraries</p>
+</div>
+  <img src="images/project/project-004.png"><br/>
+  <img src="images/project/project-006.png"><br/>
+  <img src="images/project/project-007.png"><br/>
+<div class="left">  
+  <p>Unzip SSB files on the project folder</p>
+</div><img src="images/project/project-008.png"><br/><div class="left">
 
-<p>This plugin provides tools for generating BeanShell scripts from related Java classes for IdentityIQ</p>
-<a href="jdp/update-site/">Installation</a>
+	<p>Create a new IIQ Artefact</p>
+</div><img src="images/project/project-010.png"><br/><div class="left">
 
-<h2>Quick Start</h2>
+	<p>Create a new Java Class</p>
+	<ul>
+		<li><code>@Artefact</code> - mandatory annotation.
+		  <ul>
+		  <li>target - relative (to Java Project) path to the xml artefact</li>
+		  <li>xpath - a node inside xml to update</li>
+		  <li>eol - end of line. Target | System | Windows | Unix</li>
+		  </ul>
+		</li>
+		<li>
+		  <code>@ArtefactBody</code> - the main method that body is extracted and copied into target XML node. All other methods are copied as is.
+		</li>
+		<li>
+		  <code>@ArtefactIgnore</code> - fields and methods marked with this annotation will be excluded from result script.
+		</li>
+	</ul>
+  <p>Click the IIQ Artefact button on the main toolbar while the Java class is selected</p>
+</div><img src="images/project/project-012.png"><br/><div class="left">
 
-<p>Create a Java Project and configure Java Build Path</p>
-<img src="images/project/project-001.png"><br/>
-<img src="images/project/project-002.png"><br/>
-<img src="images/project/project-003.png"><br/>
-<img src="images/project/project-004.png"><br/>
-
-<p>Unzip SSB files on the project folder and setup IdentityIQ libraries</p>
-<img src="images/project/project-005.png"><br/>
-
-<p>Create new source folder 'dev'</p>
-<img src="images/project/project-006.png"><br/>
-<img src="images/project/project-007.png"><br/>
-
-<p>Create a new Java Class</p>
-<ul>
-<li><code>@IIQArtefact</code> - mandatory annotation.
-  <ul>
-  <li>name - relative (to Java Project) path to the related xml artefact</li>
-  <li>xpath - a node inside xml to update</li>
-  <li>eol - end of line. Target | System | Windows | Unix</li>
-  </ul>
-</li>
-<li>
-  <code>@IIQArtefactBody</code> - the main method that body is extracted and copied into target XML node. All other methods are copied as is.
-</li>
-<li>
-  <code>@IIQArtefactIgnore</code> - fields and methods marked with this annotation will be excluded from result script.
-</li>
-</ul>
-<img src="images/project/project-008.png"><br/>
-
-
-<p>Create a new IdentityIQ Rule</p>
-<img src="images/project/project-009.png"><br/>
-
-<p>Click the IIQ Artefact button on the main toolbar while the Java class is selected</p>
-<img src="images/project/project-010.png"><br/>
-
-<p>Review changes made in the xml file</p>
-<img src="images/project/project-011.png"><br/>
-
+	<p>Review changes made in the xml file</p>
+</div><img src="images/project/project-013.png"><br/>
 </body>
 </html>
