--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="google" value="notranslate">
-<title>IIQ Tools JDP</title>
+<title>IdentityIQ Java Development Plugin</title>
 <link rel="stylesheet" href="style.css"/> 
 </head>
 <body>
