--- a/jdp/update-site/index.html
+++ b/jdp/update-site/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="google" value="notranslate">
-<title>IdentityIQ Java Development Plugin</title>
+<title>SailPoint IdentityIQ Eclipse Plugin</title>
 <link rel="stylesheet" href="../../style.css"/> 
 </head>
 <body>
