--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p>This plugin provides tools for generating BeanShell code from linked Java classes for SailPoint IdentityIQ</p>
 </div>
 <div class="left">	
-	<a href="jdp/update-site/">Installation</a>
+	<a href="jdp/update-site/">Installation</a>&nbsp;<a href="https://github.com/sergevoina/com.iiqtools.jdp.plugin">Source Code</a>
 	<h2>Quick Start</h2>
 	<p>Create a new Java Project</p>
 </div>	<img src="images/project/project-001.png"><br/><div class="left">  	
@@ -28,7 +28,7 @@
   <img src="images/project/project-006.png"><br/>
   <img src="images/project/project-007.png"><br/>
 <div class="left">  
-  <p>Unzip SSB files on the project folder</p>
+  <p>Optional - unzip SSB files on the project folder</p>
 </div><img src="images/project/project-008.png"><br/><div class="left">
 
 	<p>Create a new IIQ Artefact</p>
