Add license page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 	<p>This plugin provides tools for generating BeanShell code from linked Java classes for SailPoint IdentityIQ</p>
 </div>
 <div class="left">	
-	<a href="jdp/update-site/">Installation</a>&nbsp;<a href="https://github.com/sergevoina/com.iiqtools.jdp.plugin">Source Code</a>
+	<a href="jdp/update-site">Installation</a>
+	&nbsp;
+	<a href="https://github.com/sergevoina/com.iiqtools.jdp.plugin">Source Code</a>
+  &nbsp;
+  <a href="jdp/license">MIT License</a>
+	
+	
 	<h2>Quick Start</h2>
 	<p>Create a new Java Project</p>
 </div>	<img src="images/project/project-001.png"><br/><div class="left">  	
