--- a/jdp/update-site/index.html
+++ b/jdp/update-site/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="../../style.css"/> 
 </head>
 <body>
-<div class="corner-ribbon top-right sticky orange">Beta Version</div>
+<div class="corner-ribbon top-right sticky orange">Version 1.0.0</div>
 <div class="center">
 	<h1>IIQ Tools JDP <small style="font-size:12pt">IdentityIQ Java Development Plugin</small></h1>
 	<p>This URL is an Eclipse update site repository https://iiqtools.github.io/jdp/update-site</p> 
